fix: dark mode highlighting

--- a/registry/styles/index.css
+++ b/registry/styles/index.css
@@ -250,10 +250,17 @@ pre,
   width: calc(100% + 1.75rem) !important; /* Full width + left margin + right margin */
 }
 
+.dark-theme-code .shiki .highlighted {
+  background-color: rgba(139, 92, 246, 0.1) !important; /* Dark mode purple */
+}
+
+html.dark .shiki {
+  background-color: var(--shiki-dark-bg) !important;
+}
+
 html.dark .shiki,
 html.dark .shiki span {
   color: var(--shiki-dark) !important;
-  background-color: var(--shiki-dark-bg) !important;
   /* Optional, if you also want font styles */
   font-style: var(--shiki-dark-font-style) !important;
   font-weight: var(--shiki-dark-font-weight) !important;
